2005-02-28  Ethan Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm: EPSLATEX_set_color must be protected by #ifdef PM3D.

2005-02-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (set_plot_with_palette): Don't trigger display of the
	colorbox in 2D plots just because an explicit line color was set.

	* misc.c (parse_fillstyle): accept full keyword "fillstyle" in addition
	to short form "fs".

2005-02-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c(plot_c_bars) src/plot2d.c(eval_plots) docs/gnuplot.doc:
	New keyword  '... with candlesticks {whiskerbars}' that draws horizontal
	crossbars at the top and bottom of the whiskers. This is typical for
	box-and-whisker plots.  The new keyword is in lieu of adding a
	separate "boxplots" plot style (patch #624000).

	* src/gplt_x11.c (pr_fastrotate) term/x11.trm (documentation):
	The fully general implementation of text rotation added in version 4.0
	is *much* slower than it used to be. This patch adds a new X resource
	gnuplot*fastrotate: {on|off} that reverts to the faster but imperfect
	rotation method.  The default is "on", which favors fast rendering at
	the cost of possibly corrupting colors of nearby plot elements.

2005-02-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Fix botched optimization in previous patch.

2005-02-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Implement solid fill rectangles and polygons as a
	true solid color, with variable fading toward background color, rather
	than approximating by a set of 3 half-tone patterns.

	* docs/gnuplot.doc: Explain that for some terminals the size of a "dot"
	can be changed using linewidth.

2005-02-18  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm:  Allow "lw" as an abbreviation for "linewidth"
	* term/post.trm: Make dash styles 6 and 7 a bit more distinctive
	* term/emf.trm:  Add option 'set term emf {linewidth <factor>}'